# polspex

./: README.md  catalog-info.yaml  polspex.yml
backend/: pyproject.toml
backend/src/polspex/: __init__.py  __main__.py  api.py  environment.py  integrate.py  parameters.py  plot_models.py  quanty_analysis.py  quanty_runner.py  xas_analysis.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  DavidiaPlots.tsx  MarkdownTextBox.tsx  api.ts  app.css  index.css  jupyterRunner.tsx
frontend/src/comparison/: PanelComponent.tsx
frontend/src/measurement/: FormComponent.tsx  NumberRangeSelector.tsx  PanelComponent.tsx  getData.ts
frontend/src/sim/: FormComponent.tsx  PanelComponent.tsx  elements.tsx  formInputs.tsx  formParameters.tsx  handleSubmit.tsx  validateForm.tsx
